# one-composio-mcp

./: .flake8  .gitignore  CHANGELOG.md  README.md  config.example.yaml  pyproject.toml
docs/: architecture.md  cursor-setup.md  faq.md  glossary.md  smoke-test-log.md
docs/aeo/: schema.json
examples/: claude-desktop-config.example.json
scripts/: hello_dotfiles.py  validate-python.sh
src/one_composio_mcp/: cli.py  composio_client.py  config.py  connections.py  mcp_emitter.py  profiles.py  session_manager.py  state.py
tests/: conftest.py  test_cli.py  test_config.py  test_connections.py  test_mcp_emitter.py  test_profiles.py  test_session_manager.py
